# DE-duplication

./: .gitignore  README.md  evaluation_results_all_openai.txt  evaluation_results_for_1st_val_openai.txt  prototype.ipynb  pyproject.toml  requirements.txt  sample.env
app/: chain.py  evaluate_retriever.py  evaluate_tokens.py  main.py  retriever_search.py  server.py  vectorstores.py
app/evaluation/: evaluate_retriever.py  generate_mock_data.py
data/: _test.json  _train.json  data_2.json  dummy.json  dummy.txt  generate_train_and_test_data.py  info.py  test.json  train.json
prototype/: testing_pinecone.ipynb
