[tool.poetry]
name = "work_trial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
pinecone-client = "^3.0.2"
langchain-community = "^0.0.16"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
openai = "^1.10.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
pinecone-text = "^0.7.2"
numpy = "^1.26.3"
pandas = "^2.2.0"
together = "0.2.3"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
